After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 662873 - empathy-chat crashed with SIGSEGV in tp_proxy_get_object_path()
empathy-chat crashed with SIGSEGV in tp_proxy_get_object_path()
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Chat
3.2.x
Other Linux
: Normal critical
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2011-10-27 18:13 UTC by Pedro Villavicencio
Modified: 2011-12-12 15:41 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2


Attachments
get_tp_contact_for_chat: deal with tp_channel_borrow_connection() returning NULL (971 bytes, patch)
2011-10-28 08:17 UTC, Guillaume Desmottes
committed Details | Review

Description Pedro Villavicencio 2011-10-27 18:13:56 UTC
this report has been filed here:

https://bugs.launchpad.net/ubuntu/+source/empathy/+bug/871406

"Do not know if I can reproduce or not but this is what I did.
- Used only msn.
- Chatted with one person who tried to include a third party, don't know if a response was given.
- I tried to invite this third person, don't know if he responded."

".

Thread 1 (Thread 0x7fd29334e9e0 (LWP 2211))

  • #0 tp_proxy_get_object_path
    at proxy.c line 1514
  • #1 empathy_get_tp_contact_for_individual
    at empathy-utils.c line 1018
  • #2 filter_individual
    at empathy-invite-participant-dialog.c line 131
  • #3 filter_individual
    at empathy-invite-participant-dialog.c line 114
  • #4 filter_func
    at empathy-contact-chooser.c line 171
  • #5 individual_view_filter_visible_func
    at empathy-individual-view.c line 1789
  • #6 gtk_tree_model_filter_real_visible
    at /build/buildd/gtk+3.0-3.2.0/./gtk/gtktreemodelfilter.c line 1260
  • #7 gtk_tree_model_filter_visible
    at /build/buildd/gtk+3.0-3.2.0/./gtk/gtktreemodelfilter.c line 1290
  • #8 gtk_tree_model_filter_row_changed
    at /build/buildd/gtk+3.0-3.2.0/./gtk/gtktreemodelfilter.c line 2041
  • #9 g_closure_invoke
    at /build/buildd/glib2.0-2.30.0/./gobject/gclosure.c line 774
  • #10 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.30.0/./gobject/gsignal.c line 3272
  • #11 g_signal_emit_valist
    at /build/buildd/glib2.0-2.30.0/./gobject/gsignal.c line 3003
  • #12 g_signal_emit
    at /build/buildd/glib2.0-2.30.0/./gobject/gsignal.c line 3060
  • #13 gtk_tree_store_set_valist
    at /build/buildd/gtk+3.0-3.2.0/./gtk/gtktreestore.c line 1164
  • #14 gtk_tree_store_set
    at /build/buildd/gtk+3.0-3.2.0/./gtk/gtktreestore.c line 1193
  • #15 individual_avatar_pixbuf_received_cb
    at empathy-individual-store.c line 635
  • #16 g_simple_async_result_complete
    at /build/buildd/glib2.0-2.30.0/./gio/gsimpleasyncresult.c line 749
  • #17 empathy_pixbuf_avatar_from_individual_scaled_async
    at empathy-ui-utils.c line 735
  • #18 individual_store_contact_update
    at empathy-individual-store.c line 760
  • #19 g_closure_invoke
    at /build/buildd/glib2.0-2.30.0/./gobject/gclosure.c line 774
  • #20 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.30.0/./gobject/gsignal.c line 3272
  • #21 g_signal_emit_valist
    at /build/buildd/glib2.0-2.30.0/./gobject/gsignal.c line 3003
  • #22 g_signal_emit
    at /build/buildd/glib2.0-2.30.0/./gobject/gsignal.c line 3060
  • #23 g_object_dispatch_properties_changed
    at /build/buildd/glib2.0-2.30.0/./gobject/gobject.c line 925
  • #24 g_object_notify_queue_thaw
    at /build/buildd/glib2.0-2.30.0/./gobject/gobjectnotifyqueue.c line 132
  • #25 g_object_thaw_notify
    at /build/buildd/glib2.0-2.30.0/./gobject/gobject.c line 1113
  • #26 __lambda27_
    at individual.c line 3707
  • #27 ___lambda27__folks_individual_single_valued_property_setter
    at individual.c line 3715
  • #28 _folks_individual_update_single_valued_property
    at individual.c line 3316
  • #29 _folks_individual_update_presence
    at individual.c line 3721
  • #30 g_closure_invoke
    at /build/buildd/glib2.0-2.30.0/./gobject/gclosure.c line 774
  • #31 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.30.0/./gobject/gsignal.c line 3272
  • #32 g_signal_emit_valist
    at /build/buildd/glib2.0-2.30.0/./gobject/gsignal.c line 3003
  • #33 g_signal_emit
    at /build/buildd/glib2.0-2.30.0/./gobject/gsignal.c line 3060
  • #34 g_object_dispatch_properties_changed
    at /build/buildd/glib2.0-2.30.0/./gobject/gobject.c line 925
  • #35 g_object_notify_queue_thaw
    at /build/buildd/glib2.0-2.30.0/./gobject/gobjectnotifyqueue.c line 132
  • #36 g_object_notify_by_spec_internal
    at /build/buildd/glib2.0-2.30.0/./gobject/gobject.c line 983
  • #37 g_object_notify
    at /build/buildd/glib2.0-2.30.0/./gobject/gobject.c line 1024
  • #38 g_closure_invoke
    at /build/buildd/glib2.0-2.30.0/./gobject/gclosure.c line 774
  • #39 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.30.0/./gobject/gsignal.c line 3272
  • #40 g_signal_emit_valist
    at /build/buildd/glib2.0-2.30.0/./gobject/gsignal.c line 3003
  • #41 g_signal_emit
    at /build/buildd/glib2.0-2.30.0/./gobject/gsignal.c line 3060
  • #42 g_object_dispatch_properties_changed
    at /build/buildd/glib2.0-2.30.0/./gobject/gobject.c line 925
  • #43 g_object_notify_queue_thaw
    at /build/buildd/glib2.0-2.30.0/./gobject/gobjectnotifyqueue.c line 132
  • #44 g_object_notify_by_spec_internal
    at /build/buildd/glib2.0-2.30.0/./gobject/gobject.c line 983
  • #45 g_object_notify
    at /build/buildd/glib2.0-2.30.0/./gobject/gobject.c line 1024
  • #46 contact_maybe_set_simple_presence
    at contact.c line 2273
  • #47 contacts_presences_changed
    at contact.c line 2349
  • #48 _tp_cli_connection_interface_simple_presence_invoke_callback_for_presences_changed
    at _gen/tp-cli-connection-body.h line 16339
  • #49 tp_proxy_signal_invocation_run
    at proxy-signals.c line 266
  • #50 g_main_dispatch
    at /build/buildd/glib2.0-2.30.0/./glib/gmain.c line 2441
  • #51 g_main_context_dispatch
    at /build/buildd/glib2.0-2.30.0/./glib/gmain.c line 3011
  • #52 g_main_context_iterate
    at /build/buildd/glib2.0-2.30.0/./glib/gmain.c line 3089
  • #53 g_main_loop_run
    at /build/buildd/glib2.0-2.30.0/./glib/gmain.c line 3297
  • #54 gtk_main
    at /build/buildd/gtk+3.0-3.2.0/./gtk/gtkmain.c line 1367
  • #55 g_application_run
    at /build/buildd/glib2.0-2.30.0/./gio/gapplication.c line 1323
  • #56 main
    at empathy-chat.c line 160

Comment 1 Guillaume Desmottes 2011-10-28 08:15:59 UTC
So the problem here is the EmpathyTpChat having NULL as connection. I can easily fix the crash but it would be good to have a better understanding of the problem.

Any chance you could reproduce this crash and include Empathy.Chat and telepathy-butterfly logs? You can get them from the help -> debug menu.
Comment 2 Guillaume Desmottes 2011-10-28 08:17:40 UTC
Created attachment 200160 [details] [review]
get_tp_contact_for_chat: deal with tp_channel_borrow_connection() returning NULL
Comment 3 Danielle Madeley 2011-12-12 15:32:59 UTC
Review of attachment 200160 [details] [review]:

++
Comment 4 Guillaume Desmottes 2011-12-12 15:41:56 UTC
Attachment 200160 [details] pushed as 5d4aca9 - get_tp_contact_for_chat: deal with tp_channel_borrow_connection() returning NULL