get_tp_contact_for_chat: deal with tp_channel_borrow_connection() returning NULL

https://bugzilla.gnome.org/show_bug.cgi?id=662873